--- a/.env.example
+++ b/.env.example
@@ -66,3 +66,4 @@ VITE_APP_NAME="${APP_NAME}"
 
 OPENAI_API_KEY=sua_chave_api_aqui
 OPENAI_ORGANIZATION=sua_organization_id_opcional
+OPENAI_MODEL=seu_model
